# REBUILT_2026_VISION

./: .gitignore  AprilTagDetector.cpp  AprilTagDetector.h  CMakeList_test.txt  CMakeLists.txt  CameraDevice.cpp  ConstantsPoseAdapters.cpp  Get_cam_intrinsics.py  Pose3D.h  README.md  SystemConsts.py  TestAprilTagDetector.py  VisionUtills.py  a.out  cam_capture.cpp  camera_setup_template.cpp  constants.h  header.h  header_old.h  luckfox_pico_capture.cpp  luckfox_pico_capture.txt  luckfox_pico_capture_v2.cpp  main.cpp  main.py  main_old_v3.cpp  mainpy  pose_calculator.py  requirements.txt  startup.txt  test.cpp
Draft1_code/: CameraDevice.h  ConstantsPoseAdapters.h  Frame.h  PoseMath.cpp  PoseMath.h  RobotPoseEstimator.cpp  RobotPoseEstimator.h  TagPoseEstimator.cpp  TagPoseEstimator.h  constants.h
Old_Versions/: Luckfox_setup_ai  luckfox_pico_capture.txt  main_old.cpp  main_old_v2.cpp  main_old_v4.cpp
Python_Proto_files/: SystemConsts.py  VisionUtills.py  main.py
Test/: TestAprilTagDetector.py  TestVidRead.py
calibration/: calibrate_from_vid.py  requirements.txt
